src/assets/css/styles.css
.App {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
}

.navigation {
  display: flex;
  align-items: center;
  flex-direction: column;
  justify-content: space-between;
  padding: 1.2em;
}

h4 {
  margin-bottom: 1rem;
}

p {
  margin-bottom: 0.5rem;
}

.home-header {
  text-align: center;
  margin-bottom: 1.5rem;
}

.home-blurb {
  text-align: center;
}

.home-intro {
  margin-bottom: 1.5rem;
}

.home-text p {
  font-size: 14px;
}

.contact-bar {
  display: flex;
  justify-content: space-evenly;
}

.contact-welcome {
  text-align: center;
}

.navigation .logo {
  height: 100px;
  padding: 0;
}

.nav-links,
.contacts {
  font-size: 16px;
  letter-spacing: 0.3px;
  text-transform: uppercase;
}

.nav-links a {
  font-weight: bold;
  margin: 0 12px;
  padding: 0 0 4px 0;
}

.contacts a {
  font-weight: bold;
  margin: 0 12px;
  padding: 0 0 4px 0;
}

.face {
  vertical-align: middle;
}

.face img {
  height: 100px;
  float: left;
}

.second-face {
  vertical-align: middle;
}

.second-face img {
  height: 150px;
  float: right;
}

.project-header {
  text-align: center;
  margin-bottom: 12px;
}

.project-grid {
  margin-top: 12px;
}

.project-photo {
  height: 250px;
  object-fit: contain;
}

.card-group {
  margin-bottom: 2rem;
  column-gap: 2rem;
}

.card {
  border: thin solid;
}

.card-footer {
  text-align: center;
}

.card .btn {
  width: 100px;
  height: auto;
  margin-left: 10px;
  margin-right: 10px;
}

.footer {
  font-size: 16px;
  text-align: center;
  text-transform: uppercase;
  padding: 32px 24px 12px;
}

.copyright {
  font-size: 10px;
  margin: 10px;
}

/* this was the noticeable break point where things started disorting, add adjustments for small screens here as needed! */
@media (max-width: 767px) {
  img {
    float: none;
  }

  .face {
    display: flex;
    justify-content: center;
  }

  .second-face {
    display: flex;
    justify-content: center;
  }

  .contact-bar {
    font-size: 12px;
  }

  .face {
    margin-bottom: 12px;
  }

  .second-face {
    margin-top: 12px;
  }

  .card .btn {
    margin-top: 10px;
    margin-bottom: 10px;
  }
}

